# ADAPT-Data-Browser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data_browser/: app.py
data_browser/core/: data_manager.py
data_browser/ui/: file_list_panel.py  main_window.py  viewer_panel.py
loaders/: __init__.py  load_adress_data.py  load_ibw_data.py  load_ses_zip.py  load_sis_data.py
