[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adapt-databrowser"
version = "0.1.0"
description = "ADAPT - ARPES Data Analysis & Processing Tool - Data Browser"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ADAPT Team" }
]
keywords = ["ARPES", "data analysis", "scientific", "visualization", "HDF5", "spectroscopy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "PySide6>=6.4.0",
    "numpy>=1.20.0",
    "xarray>=2022.0.0",
    "h5py>=3.0.0",
    "pyqtgraph>=0.13.0",
    "matplotlib>=3.5.0",
    "igor2>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
]

[project.scripts]
adapt-browser = "data_browser.app:main"

[project.urls]
Homepage = "https://github.com/adapt-arpes/ADAPT-databrowser"
Repository = "https://github.com/adapt-arpes/ADAPT-databrowser"

[tool.hatch.build.targets.wheel]
packages = ["data_browser", "loaders"]
